# CG-I-2015

./: .gitignore
demo/: CMakeLists.txt
demo/src/: example.cpp  example.h  imageview.cpp  imageview.h  main.cpp  mainwindow.cpp  mainwindow.h
excercise2/programmrahmen/data/: exercise6.frag  exercise6.vert
excercise2/programmrahmen/src/: exercise5.cpp  exercise5.h  exercise6.cpp  exercise6.h  mainwindow.cpp  mainwindow.h  stable.h
excercise4/programmrahmen/: FrameworkQt  Makefile  moc_abstractpainter.cpp  moc_camera.cpp  moc_glviewer.cpp  moc_mainwindow.cpp  moc_navigation.cpp
excercise4/programmrahmen/src/: exercise12.cpp  exercise12.h  exercise13.cpp  exercise13.h  exercise14.cpp  exercise14.h  mainwindow.cpp
excercise5/programmrahmen/: CMakeCache.txt  Makefile  cmake_install.cmake  moc_canvas.cpp  moc_glviewer.cpp  moc_mainwindow.cpp
excercise5/programmrahmen/data/: box.vert  haloedlines.frag  haloedlines.geom  model.geom
excercise5/programmrahmen/src/: exercise16.cpp  exercise18.cpp
excercise6/programmrahmen/: CMakeCache.txt  CMakeLists.txt
excercise6/programmrahmen/data/: mesh.frag  mesh.vert  polygon.frag  polygon.vert
excercise6/programmrahmen/src/: exercise19.cpp  exercise19.h  exercise20.cpp  exercise20.h  mainwindow.cpp
programmrahmen_v02/: CMakeLists.txt
programmrahmen_v02/src/: exercise123.cpp  exercise123.h  exercise4a.cpp  exercise4a.h  exercise4b.cpp  exercise4b.h  main.cpp  mainwindow.cpp  mainwindow.h
programmrahmen_v02/src/util/: imageview.cpp  imageview.h
Übung3/: Aufgabe 7.docx  ~$fgabe 7.docx
(+24 files in other folders)
